# clockd

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
clockd/: Makefile.am  clock_dbus.h  clockd.c  clockd.h  codec.c  codec.h  internal_time_utils.c  internal_time_utils.h  libtime-uninstalled.pc.in  libtime.c  libtime.h  libtime.pc.in  logging.c  logging.h  mainloop.c  mainloop.h  mcc_tz_utils.c  mcc_tz_utils.h  rclockd.c  server.c  server.h  sighnd.c  sighnd.h
contrib/: gen-comments-libtime.rb  gen-comments.rb  string_comment.rb
contrib/legacy/: annotated.html  clock__dbus_8h.html  clockd_8c.html  clocktest_8c.html  codec_8c.html  codec_8h.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  internal__time__utils_8c.html  internal__time__utils_8h.html  logging_8c.html  logging_8h.html  mainloop_8c.html  mainloop_8h.html  mcc__tz__utils_8c.html  mcc__tz__utils_8h.html  pages.html  rclockd_8c.html  server_8c.html  server_8h.html  sighnd_8c.html  sighnd_8h.html  structrtc__time.html  todo.html
contrib/legacy-libtime/: files.html  globals.html  globals_defs.html  globals_func.html  index.html  libtime_8c.html  libtime_8h.html
debian/: changelog  clockd.init  clockd.install  control  libtime-dev.dirs  libtime-dev.install  libtime0.install  rules
etc/dbus-1/system.d/: clockd.conf
etc/event.d/: clock-daemon
etc/init.d/: clockd
etc/osso-backup/applications/: clockd.conf
etc/osso-backup/restore.d/always/: clockd_restart.sh
etc/osso-rfs-scripts/: clockd-rfs.sh
